# hyperlight-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  RustDev.md  flake.nix  rust-toolchain.toml
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: Benchmarks.yml  CargoAudit.yml  CreateDevcontainerImage.yml  CreateRelease.yml  CreateReleaseBranch.yml  IssueLabelChecker.yml  ValidatePullRequest.yml  auto-merge-dependabot.yml  dep_build_wasm_examples.yml  dep_cargo_publish.yml  dep_rust.yml  ready-for-review-label.yml
docs/: github-labels.md  observability.md  wasm-modules-debugging.md
src/component_sample/: Cargo.toml
src/component_sample/src/: bindings.rs  lib.rs
src/component_sample/wit/: example.wit
src/greeter_sample/src/: bindings.rs  lib.rs
src/hyperlight_wasm/: .gitignore  Cargo.toml  build.rs  vendor.tar
src/hyperlight_wasm/benches/: benchmarks.rs  benchmarks_components.rs
src/hyperlight_wasm/examples/c-component/: main.rs
src/hyperlight_wasm/examples/component_example/: main.rs
src/hyperlight_wasm/examples/component_greeter_example/: main.rs
src/hyperlight_wasm/examples/guest-debugging/: main.rs
src/hyperlight_wasm/examples/helloworld/: main.rs
src/hyperlight_wasm/examples/hostfuncs/: main.rs
src/hyperlight_wasm/examples/interruption/: main.rs
src/hyperlight_wasm/examples/js-component/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
src/hyperlight_wasm/examples/js-component/.cargo/: config.toml
src/hyperlight_wasm/examples/js-component/js/: hello.js
src/hyperlight_wasm/examples/js-component/src/: main.rs
src/hyperlight_wasm/examples/js-component/wit/: hello-world.wasm  hello.wit
src/hyperlight_wasm/examples/metrics/: main.rs
src/hyperlight_wasm/examples/monte_carlo_example/: main.rs
src/hyperlight_wasm/examples/rust_wasm_examples/: main.rs
src/hyperlight_wasm/examples/tracing-otlp/: main.rs
src/hyperlight_wasm/examples/wasi_examples/: main.rs
src/hyperlight_wasm/scripts/: build-wasm-examples.bat  build-wasm-examples.sh  check-elf-simd.sh
src/hyperlight_wasm/src/: build_info.rs  lib.rs
src/hyperlight_wasm/src/sandbox/: loaded_wasm_sandbox.rs  metrics.rs  mod.rs  proto_wasm_sandbox.rs  sandbox_builder.rs  wasm_sandbox.rs
src/hyperlight_wasm_aot/: Cargo.toml
src/hyperlight_wasm_aot/src/: main.rs
src/hyperlight_wasm_macro/: Cargo.toml
src/hyperlight_wasm_macro/src/: lib.rs  wasmguest.rs
src/hyperlight_wasm_runtime/: Cargo.toml  build.rs
src/hyperlight_wasm_runtime/src/: component.rs  lib.rs  main.rs  marshal.rs  module.rs  platform.rs  wasip1.rs
src/rust_wasm_samples/: Cargo.toml  build.rs
src/rust_wasm_samples/.cargo/: config.toml
src/rust_wasm_samples/src/: lib.rs  simd.rs
src/tests/c_guests/wasmsamples/: .gitignore  HelloWorld.c  compile-wasm.bat  dockerfile
src/tests/c_guests/wasmsamples/components/bindings/: runcomponent.c  runcomponent.h
src/tests/rust_guests/component_sample/: Cargo.toml
src/tests/rust_guests/component_sample/src/: bindings.rs
src/tests/rust_guests/component_sample/wit/: component-world.wasm  example.wit
src/tests/rust_guests/greeter_sample/: Cargo.toml
src/wasi_samples/: Cargo.toml
src/wasi_samples/src/: bindings.rs  lib.rs
src/wasi_samples/wit/: example.wit
src/wasip2_guest/: Cargo.toml
src/wasip2_guest/src/: lib.rs
src/wasip2_guest/wit/: monte-carlo.wit
src/wasm_runtime/: .gitignore  Cargo.toml  build.rs
src/wasm_runtime/.cargo/: config.toml
src/wasm_runtime/src/: component.rs  hostfuncs.rs  lib.rs  main.rs  marshal.rs  module.rs  platform.c  platform.rs  wasip1.rs
src/wasmsamples/: RunWasm.c  compile-wasm.bat  dockerfile
src/wasmsamples/components/: component.c  runcomponent.c  runcomponent.h  runcomponent.wit
