[workspace]
members = [ "src/hyperlight_wasm", "src/examples_common", "src/hyperlight_wasm_aot" ]
exclude = [ "src/wasm_runtime",  "src/rust_wasm_samples", "src/hyperlight_wasm_macro", "src/component_sample" ]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight-wasm"
repository = "https://github.com/hyperlight-dev/hyperlight-wasm"
readme = "README.md"

[workspace.dependencies]
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight", version = "0.10.0", rev = "7a266216c658331d9ff6f7315ba8c3f6a4926ad6", default-features = false, features = ["executable_heap", "init-paging"] }
