[workspace]
members = [ "src/hyperlight_wasm", "src/examples_common", "src/hyperlight_wasm_aot" ]
exclude = [ "src/wasm_runtime",  "src/rust_wasm_samples", "src/hyperlight_wasm_macro", "src/component_sample" ]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight-wasm"
repository = "https://github.com/hyperlight-dev/hyperlight-wasm"
readme = "README.md"

[workspace.dependencies]
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "lm/cow-wasm-work", default-features = false, features = ["executable_heap", "init-paging"] }
