[workspace]
members = [ "src/hyperlight_wasm", "src/examples_common", "src/hyperlight_wasm_aot", "src/wasm_runtime", "src/hyperlight_wasm_macro" ]
exclude = [ "src/rust_wasm_samples", "src/component_sample" ]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight-wasm"
repository = "https://github.com/hyperlight-dev/hyperlight-wasm"
readme = "README.md"

[workspace.dependencies]
hyperlight-host = { version = "0.12.0", default-features = false, features = ["executable_heap", "init-paging"] }
