[package]
name = "hyperlight-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Library that enables wasm modules and components to be run inside lightweight Virtual Machine backed Sandbox. It is built on top of Hyperlight.
"""
include = [
    "/src",
    "/scripts",
    "/examples",
    "benches",
    "/build.rs",
    "/vendor.tar", # Make sure vendor.tar is included!
]

[lib]
name = "hyperlight_wasm"
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "helloworld"
path = "examples/helloworld/main.rs"
test = true

[[example]]
name = "guest-debugging"
path = "examples/guest-debugging/main.rs"
test = true

[[example]]
name = "hostfuncs"
path = "examples/hostfuncs/main.rs"
test = true

[[example]]
name = "rust_wasm_examples"
path = "examples/rust_wasm_examples/main.rs"
test = true

[[example]]
name = "metrics"
path = "examples/metrics/main.rs"
test = true

[[example]]
name = "tracing-otlp"
path = "examples/tracing-otlp/main.rs"
test = true

[[example]]
name = "interruption"
path = "examples/interruption/main.rs"
test = true

[dependencies]
hyperlight-host = { workspace = true }
libc = { version = "0.2.178" }
once_cell = "1.21.3"
tracing = "0.1.43"
log = "0.4"
cfg-if = { version = "1" }
metrics = "0.24.3"
env_logger = "0.11.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading"] }
page_size = "0.6.0"

[dev-dependencies]
hyperlight-component-macro = { version = "0.12.0" }
examples_common = { path = "../examples_common" }
criterion = { version = "0.8.1", features = ["html_reports"] }
crossbeam-queue = "0.3"
blake3 = "1.8"
toml = "0.9.10"
metrics-util = "0.20.1"
metrics-exporter-prometheus = "0.18"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["http-proto", "reqwest-blocking-client", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-forest = { version = "0.3.0", features = ["uuid", "chrono", "smallvec", "serde", "env-filter"] }
tracing = "0.1.43"
tracing-subscriber = {version = "0.3.22", features = ["std", "env-filter"]}
tracing-opentelemetry = "0.32.0"
uuid = { version = "1.19.0", features = ["v4"] }

[build-dependencies]
cfg_aliases = "0.2.1"
chrono = "0.4"
blake3 = "1.8"
built = { version = "0.8.0", features = ["chrono", "git2"] }
anyhow = { version = "1.0" }
goblin = "0.10.4"
tar = "0.4.44"
cargo-hyperlight = "0.1.5"

[target.'cfg(windows)'.build-dependencies]
junction = "1"

[features]
default = ["function_call_metrics", "kvm", "mshv3"]
function_call_metrics = ["hyperlight-host/function_call_metrics"]
print_debug = ["hyperlight-host/print_debug"]
crashdump = ["hyperlight-host/crashdump"]
gdb = ["hyperlight-host/gdb"]
kvm = ["hyperlight-host/kvm"]
mshv3 = ["hyperlight-host/mshv3"]
trace_guest = ["hyperlight-host/trace_guest"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "benchmarks_components"
harness = false

