[package]
name = "hyperlight-wasm-aot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Application to precompile WebAssembly binaries to for hyperlight-wasm.
"""

[dependencies]
wasmtime = { version = "36.0.5", default-features = false, features = ["cranelift", "pulley", "runtime", "component-model" ] }
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.23"
cargo-util-schemas = "0.10.1"
object = { version = "0.38.1", default-features = false, features = ["read_core", "elf"] }

[features]
gdb = ["wasmtime/debug-builtins"]
