[package]
name = "hyperlight-wasm-aot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Application to precompile WebAssembly binaries to for hyperlight-wasm.
"""

[dependencies]
# Since we can use the library with either the latest bundled wasmtime or the LTS version
# we need to bundle both here as dependencies.
# The default is latest version bundled
# To use LTS version pass the --lts flag when using this tool
wasmtime = { version = "41.0.4", default-features = false, features = ["cranelift", "pulley", "runtime", "component-model"] }
wasmtime_lts = { package = "wasmtime", version = "36.0.6", default-features = false, features = ["cranelift", "runtime", "component-model"] }
clap = { version = "4.6", features = ["derive"] }
cargo_metadata = "0.23"
cargo-util-schemas = "0.10.1"
object = { version = "0.38.1", default-features = false, features = ["read_core", "elf"] }
