[package]
name = "hyperlight-wasm-macro"
version = "0.8.0"
edition = "2024"
description = """
Procedural macros to generate Hyperlight Wasm host and guest bindings from component types
"""

[lib]
name = "hyperlight_wasm_macro"
proc-macro = true

[dependencies]
quote = { version = "1.0.38" }
proc-macro2 = { version = "1.0.101" }
syn = { version = "2.0.106" }
itertools = { version = "0.14.0" }
prettyplease = { version = "0.2.31" }
hyperlight-component-util = { version = "0.8.0" }
