[package]
name = "wasm-runtime"
version = "0.10.0"
edition = "2021"

[[bin]]
name = "wasm_runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight.git", rev = "2e8b6c8935cbef1188c591ec40d2ecfe92ecd5b4", version = "0.10.0", default-features = false }
hyperlight-guest-bin = { git = "https://github.com/hyperlight-dev/hyperlight.git", rev = "2e8b6c8935cbef1188c591ec40d2ecfe92ecd5b4", version = "0.10.0" }
hyperlight-guest = { git = "https://github.com/hyperlight-dev/hyperlight.git", rev = "2e8b6c8935cbef1188c591ec40d2ecfe92ecd5b4", version = "0.10.0" }
wasmtime = { version = "36.0.2", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ] }
hyperlight-wasm-macro = { path = "../hyperlight_wasm_macro" }
spin = "0.10.0"
tracing = { version = "0.1.41", default-features = false, features = ["attributes", "log"] }

[build-dependencies]
cfg_aliases = "0.2.1"
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.23"
reqwest =  {version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }

[workspace] # indicate that this crate is not part of any workspace

[features]
default = []
gdb = ["wasmtime/debug-builtins"]
trace_guest = ["hyperlight-common/trace_guest", "hyperlight-guest/trace_guest", "hyperlight-guest-bin/trace_guest"]
