[package]
name = "wasm-runtime"
version = "0.12.0"
edition = "2021"

[[bin]]
name = "wasm_runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
hyperlight-common = { version = "0.12.0", default-features = false }
hyperlight-guest-bin = { version = "0.12.0", features = [ "printf" ] }
hyperlight-guest = { version = "0.12.0" }
# Default to latest wasmtime, use wasmtime_lts feature for LTS version 
# These are marked optional to avoid pulling them both in.  The should be mutually exclusive.
wasmtime = { version = "39.0.1", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ], optional = true }
wasmtime_lts = { package = "wasmtime", version = "36.0.3", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ], optional = true }
hyperlight-wasm-macro = { path = "../hyperlight_wasm_macro" }
spin = "0.10.0"
tracing = { version = "0.1.44", default-features = false, features = ["attributes", "log"] }

[build-dependencies]
cfg_aliases = "0.2.1"
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.23"
reqwest =  {version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }

[workspace] # indicate that this crate is not part of any workspace

[features]
default = ["wasmtime_latest"]
wasmtime_latest = ["dep:wasmtime"]
wasmtime_lts = ["dep:wasmtime_lts"]
gdb = ["wasmtime?/debug-builtins", "wasmtime_lts?/debug-builtins"]
trace_guest = ["hyperlight-common/trace_guest", "hyperlight-guest/trace_guest", "hyperlight-guest-bin/trace_guest"]
